load("@msvc_sysroot//:defs.bzl", "MSVC_INCLUDE", "MSVC_LIB_X86", "SHARED_INCLUDE", "UCRT_INCLUDE", "UCRT_LIB_X86", "UM_INCLUDE", "UM_LIB_X86")
load("@rules_cc//cc/toolchains:args.bzl", "cc_args")
load("@rules_cc//cc/toolchains:feature.bzl", "cc_feature")
load("@rules_cc//cc/toolchains:tool.bzl", "cc_tool")
load("@rules_cc//cc/toolchains:tool_map.bzl", "cc_tool_map")
load("@rules_cc//cc/toolchains:toolchain.bzl", "cc_toolchain")

package(default_visibility = ["//visibility:public"])

cc_tool(
    name = "cl",
    src = "@msvc_sysroot//:msvc_bin_x86/cl.exe",
    data = ["@msvc_sysroot//:msvc_tools_x86"],
)

cc_tool(
    name = "link",
    src = "@msvc_sysroot//:msvc_bin_x86/link.exe",
    data = ["@msvc_sysroot//:msvc_tools_x86"],
)

cc_tool_map(
    name = "tools",
    tags = ["manual"],
    tools = {
        "@rules_cc//cc/toolchains/actions:assembly_actions": ":cl",
        "@rules_cc//cc/toolchains/actions:c_compile": ":cl",
        "@rules_cc//cc/toolchains/actions:cpp_compile_actions": ":cl",
        "@rules_cc//cc/toolchains/actions:link_actions": ":link",
    },
)

cc_args(
    name = "msvc_sysroot_includes",
    actions = ["@rules_cc//cc/toolchains/actions:compile_actions"],
    allowlist_absolute_include_directories = [
        MSVC_INCLUDE,
        UCRT_INCLUDE,
        UM_INCLUDE,
        SHARED_INCLUDE,
    ],
    args = [
        "/I" + MSVC_INCLUDE,
        "/I" + UCRT_INCLUDE,
        "/I" + UM_INCLUDE,
        "/I" + SHARED_INCLUDE,
    ],
)

cc_args(
    name = "msvc_sysroot_libs",
    actions = ["@rules_cc//cc/toolchains/actions:link_actions"],
    args = [
        "/LIBPATH:" + MSVC_LIB_X86,
        "/LIBPATH:" + UCRT_LIB_X86,
        "/LIBPATH:" + UM_LIB_X86,
        "/MACHINE:X86",
    ],
)

cc_args(
    name = "show_includes",
    actions = ["@rules_cc//cc/toolchains/actions:compile_actions"],
    args = ["/showIncludes"],
)

cc_feature(
    name = "parse_showincludes",
    args = [":show_includes"],
    feature_name = "parse_showincludes",
)

cc_toolchain(
    name = "windows_x86_msvc",
    args = [
        ":msvc_sysroot_includes",
        ":msvc_sysroot_libs",
    ],
    compiler = "msvc-cl",
    enabled_features = [":parse_showincludes"],
    known_features = [":parse_showincludes"],
    tool_map = ":tools",
)

toolchain(
    name = "windows_x86_msvc_toolchain",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:windows",
    ],
    target_compatible_with = [
        "@platforms//cpu:x86_32",
        "@platforms//os:windows",
    ],
    toolchain = ":windows_x86_msvc",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)
