load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")
load("//bazel:qt_targets.bzl", "COMMON_COPTS", "COMMON_INCLUDES", "PORTABLE_COPTS", "QT_DEPS")

package(default_visibility = [
    "//src/algorithms:__subpackages__",
    "//src/backend:__subpackages__",
    "//src/platform:__subpackages__",
    "//src/ui:__subpackages__",
    "//tests:__pkg__",
])

# root //:bazel_openssl_wiring reads this file as `data` to check Bazel/CI
# openssl wiring stays consistent; that reference is plumbing, not a layer
# dependency, so export it to the root package specifically rather than
# widen the package's general default_visibility.
exports_files(
    ["BUILD.bazel"],
    visibility = ["//:__pkg__"],
)

# @openssl is deliberately retained. The portable-closure check rejects Qt and
# JNI only; step 7 decides OpenSSL's fate once NDK cross-compilation is real.
cc_library(
    name = "crypto",
    srcs = glob(
        ["*.cpp"],
        exclude = [
            "*_test.cpp",
            "qt_*.cpp",
        ],
    ),
    hdrs = glob(
        ["*.h"],
        exclude = [
            "*_test.h",
            "qt_*.h",
        ],
    ),
    copts = PORTABLE_COPTS,
    deps = [
        "//src/algorithms/protocol",
        "@openssl",
    ],
)

# TRANSITIONAL Qt shim. Wraps the portable Cipher in QByteArray-taking
# methods for callers that haven't migrated off Qt containers yet.
cc_library(
    name = "qt_compat",
    srcs = ["qt_cipher.cpp"],
    hdrs = ["qt_cipher.h"],
    copts = COMMON_COPTS,
    includes = COMMON_INCLUDES,
    deps = QT_DEPS + [
        ":crypto",
        "//src/algorithms/protocol:qt_compat",
    ],
)

cc_test(
    name = "cipher_test",
    size = "small",
    srcs = ["cipher_test.cpp"],
    copts = PORTABLE_COPTS,
    deps = [
        ":crypto",
        "@googletest//:gtest_main",
    ],
)
