load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("//bazel:qt_targets.bzl", "COMMON_COPTS", "COMMON_INCLUDES", "QT_DEPS")

package(default_visibility = [
    "//src/algorithms:__subpackages__",
    "//src/backend:__subpackages__",
    "//src/platform:__subpackages__",
    "//src/ui:__subpackages__",
    "//tests:__pkg__",
])

# root //:portable_closure reads this file as `data` to check that portable
# algorithms targets stay Qt-free; that reference is plumbing, not a layer
# dependency, so export it to the root package specifically rather than
# widen the package's general default_visibility.
exports_files(
    ["BUILD.bazel"],
    visibility = ["//:__pkg__"],
)

cc_library(
    name = "diagnostics",
    srcs = glob(
        ["*.cpp"],
        exclude = ["*_test.cpp"],
    ),
    hdrs = glob(
        ["*.h"],
        exclude = ["*_test.h"],
    ),
    copts = COMMON_COPTS,
    includes = COMMON_INCLUDES,
    deps = QT_DEPS,
)
