load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")
load("//bazel:qt_targets.bzl", "COMMON_COPTS", "COMMON_INCLUDES", "PORTABLE_COPTS", "QT_DEPS")

package(default_visibility = [
    "//src/algorithms:__subpackages__",
    "//src/backend:__subpackages__",
    "//src/platform:__subpackages__",
    "//src/ui:__subpackages__",
    "//tests:__pkg__",
])

# root //:portable_closure reads this file as `data` to check that portable
# algorithms targets stay Qt-free; that reference is plumbing, not a layer
# dependency, so export it to the root package specifically rather than
# widen the package's general default_visibility.
exports_files(
    ["BUILD.bazel"],
    visibility = ["//:__pkg__"],
)

cc_library(
    name = "diagnostics",
    srcs = glob(
        ["*.cpp"],
        exclude = [
            "*_test.cpp",
            "qt_*.cpp",
        ],
    ),
    hdrs = glob(
        ["*.h"],
        exclude = [
            "*_test.h",
            "qt_*.h",
        ],
    ),
    copts = PORTABLE_COPTS,
    deps = ["//src/algorithms/protocol"],
)

# TRANSITIONAL Qt shim: preserves the pre-conversion NrcParser::parse /
# DtcParser::parse QByteArray/QHash<int,QString> API for backend FileActions,
# whose NRC/DTC lookup tables are still QHash statics (error_codes.h),
# delegating to the portable nrc_description()/dtc_description() free
# functions.
cc_library(
    name = "qt_compat",
    srcs = [
        "qt_dtc_parser.cpp",
        "qt_nrc_parser.cpp",
    ],
    hdrs = [
        "qt_dtc_parser.h",
        "qt_nrc_parser.h",
    ],
    copts = COMMON_COPTS,
    includes = COMMON_INCLUDES,
    deps = QT_DEPS + [
        ":diagnostics",
        "//src/algorithms/protocol:qt_compat",
    ],
)

cc_test(
    name = "diagnostics_test",
    size = "small",
    srcs = ["diagnostics_test.cpp"],
    copts = PORTABLE_COPTS,
    deps = [
        ":diagnostics",
        "@googletest//:gtest_main",
    ],
)
