load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("//bazel:qt_targets.bzl", "COMMON_COPTS", "COMMON_INCLUDES", "QT_DEPS")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "expression",
    srcs = glob(["*.cpp"]),
    hdrs = glob(["*.h"]),
    copts = COMMON_COPTS,
    includes = COMMON_INCLUDES,
    deps = QT_DEPS,
)
