load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")
load("//bazel:qt_targets.bzl", "COMMON_COPTS", "COMMON_INCLUDES", "PORTABLE_COPTS", "QT_DEPS")

package(default_visibility = [
    "//src/algorithms:__subpackages__",
    "//src/backend:__subpackages__",
    "//src/platform:__subpackages__",
    "//src/ui:__subpackages__",
    "//tests:__pkg__",
])

# root //:portable_closure reads this file as `data` to check that portable
# algorithms targets stay Qt-free; that reference is plumbing, not a layer
# dependency, so export it to the root package specifically rather than
# widen the package's general default_visibility.
exports_files(
    ["BUILD.bazel"],
    visibility = ["//:__pkg__"],
)

cc_library(
    name = "expression",
    srcs = ["expression_evaluator.cpp"],
    hdrs = ["expression_evaluator.h"],
    copts = PORTABLE_COPTS,
)

# TRANSITIONAL Qt shim: reinstates the pre-conversion ExpressionEvaluator
# QString/QStringList static-method API for src/backend/definitions
# (FileActions is not yet converted), delegating to :expression.
cc_library(
    name = "qt_compat",
    srcs = ["qt_expression_evaluator.cpp"],
    hdrs = ["qt_expression_evaluator.h"],
    copts = COMMON_COPTS,
    includes = COMMON_INCLUDES,
    deps = QT_DEPS + [":expression"],
)

cc_test(
    name = "expression_evaluator_test",
    size = "small",
    srcs = ["expression_evaluator_test.cpp"],
    copts = PORTABLE_COPTS,
    deps = [
        ":expression",
        "@googletest//:gtest_main",
    ],
)
