load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("//bazel:qt_targets.bzl", "COMMON_COPTS", "COMMON_INCLUDES", "QT_DEPS", "qt_cc_library")

package(default_visibility = ["//visibility:public"])

MODEL_HDRS = [
    "kernelcomms.h",
    "kernelmemorymodels.h",
]

MOC_HDRS = ["file_actions.h"]

# Pure data headers, no project includes. Split out so that
# //src/backend/flash can depend on them without creating a
# definitions <-> flash cycle via flash_utils.h.
cc_library(
    name = "models",
    hdrs = MODEL_HDRS,
    includes = COMMON_INCLUDES,
)

qt_cc_library(
    name = "definitions",
    srcs = glob(["*.cpp"]),
    hdrs = MOC_HDRS,
    copts = COMMON_COPTS,
    includes = COMMON_INCLUDES,
    normal_hdrs = glob(
        ["*.h"],
        exclude = MOC_HDRS + MODEL_HDRS,
    ),
    deps = QT_DEPS + [
        ":models",
        "//resources/shared:config_resource",
        "//resources/shared:kernels_resource",
        "//src/algorithms/checksum",
        # file_actions.h includes dtc_parser.h/nrc_parser.h directly; not in
        # the original plan's dep list, added after checking the real
        # #include graph (see task-4-report.md).
        "//src/algorithms/diagnostics",
        "//src/algorithms/expression",
        "//src/backend/flash",
    ],
)
