load("//bazel:qt_targets.bzl", "COMMON_COPTS", "COMMON_INCLUDES", "QT_DEPS", "qt_cc_library")

package(default_visibility = [
    "//src/backend:__subpackages__",
    "//src/platform:__subpackages__",
    "//src/ui:__subpackages__",
    "//tests:__pkg__",
])

MOC_HDRS = ["flash_operation_worker.h"]

qt_cc_library(
    name = "flash",
    srcs = glob(["*.cpp"]),
    hdrs = MOC_HDRS,
    copts = COMMON_COPTS,
    includes = COMMON_INCLUDES,
    normal_hdrs = glob(
        ["*.h"],
        exclude = MOC_HDRS,
    ),
    deps = QT_DEPS + [
        "//src/algorithms/protocol",
        "//src/backend/definitions:models",
        "//src/platform/desktop/common/serial:serial_qt_compat",
    ],
)
