load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("//bazel:qt_targets.bzl", "PORTABLE_COPTS")

package(default_visibility = [
    "//src/backend:__subpackages__",
    "//src/platform:__subpackages__",
    "//src/ui:__subpackages__",
    "//tests:__pkg__",
])

exports_files(
    ["BUILD.bazel"],
    visibility = ["//:__pkg__"],
)

# Portable. Qt-only container adapters belong in the algorithms' :qt_compat
# targets and platform callers adapt at their boundary.
cc_library(
    name = "protocol",
    srcs = glob(["*.cpp"]),
    hdrs = glob(["*.h"]),
    copts = PORTABLE_COPTS,
    deps = [
        "//src/algorithms/protocol",
        "//src/algorithms/protocol/colt",
        "//src/algorithms/protocol/mut_dma",
        "//src/backend/ports",
    ],
)
